Fix collapse animation (for log group)

--- a/src/themes/dark/log.sass
+++ b/src/themes/dark/log.sass
@@ -2,8 +2,6 @@ $color-main: #381f2f
 $color-dark2: #303133
 
 .row
-  border-bottom: 1px solid $color-main
-
   &:before
     color: $color-dark2
 
